deployment/kubernetes-local/api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: finalapi
  labels:
    app: finalapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finalapi
  template:
    metadata:
      labels:
        app: finalapi
    spec:
      containers:
      - name: finalapi
        image: finalnodejsapi:v1
        volumeMounts:
          - name: api-config
            mountPath: /usr/api/api.config.json
            subPath: api.config.json
            readOnly: true
          - name: api-ssl-cert
            mountPath: /usr/api/certs
            readOnly: true
      volumes:
        - name: api-config
          configMap:
            name: api-config
        - name: api-ssl-cert
          secret:
            secretName: finalapi-pkcs12
---
kind: Service
apiVersion: v1
metadata:
  name: finalapi-svc
  annotations:
    konghq.com/protocol: https
spec:
  selector:
    app: finalapi
  ports:
  - protocol: "TCP"
    port: 8101
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: finalapi-ingress
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - api.mycluster.com
      secretName: mycluster-com-tls
  rules:
    - host: api.mycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finalapi-svc
                port:
                  number: 8101
